--- a/industry.html
+++ b/industry.html
@@ -17,6 +17,13 @@
     <div class="main">
       <div class="container">
         <h1>Civil Infrastructure projects and designs</h1>
+        <img src="steel_mezzanines.png" width="350cm" height="250cm"/><br><br>
+        <h2>Steel Mezzanines for industrial Warehouses</h2>
+        <ul>
+          <li>Project: Industrial Steel Mezzanines</li>
+          <li>Location: General Motors, Silao, Guanjuato, México</li>
+          <li>Date: September 2019</li>
+        </ul><br><br><br><br><br><br><br><br><br><br><br>
         <img src="manholes.png" width="250cm" height="200cm"/>
         <p><br><br></p>
         <h2>Underground Reinforced Concrete Manholes </h2>
