Screen - resolution Stage final 1

--- a/index.html
+++ b/index.html
@@ -9,39 +9,158 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <div class="header">
-      <div class="container">
-        <h1>Luis Fernando Verduzco</h1>
-        <p>Welcome to my personal website</p>
-        <a class="btn" href="skills_experience.html">How can I help you? See more of my professional experience and skills</a>
+    <div class="desktop">
+      <div class="header">
+        <div class="container">
+          <h1>Luis Fernando Verduzco</h1>
+          <p>Welcome to my personal website</p>
+          <a class="btn" href="skills_experience.html">Professional experience and skills</a>
+        </div>
+      </div>
+      <div class="nav">
+        <div class="container">
+          <ul>
+            <li> <a class="btn" href="publications.html">Scientific Publications (Papers)</a></li>
+            <li> <a class="btn" href="osoftware.html">Open Source Software</a></li>
+            <li> <a class="btn" href="social_websites.html">Social research websites</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="nav">
+        <div class="container">
+          <ul>
+            <li><a class="btn" href="industry.html">Civil Infrastructure projects</a></li>
+            <li><a class="btn" href="current_research.html">Current research and projects</a></li>
+            <li><a class="btn" href="bio.html">About me</a></li>
+            <li><a class="btn" href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="main">
+        <div class="container">
+          <img src="meLFVM.jpg" width="230cm" height="320cm"/><br><br>
+          <h2>Educational background</h2>
+          <p> B.Eng. <em>Civil Engineer </em> - University of Guanajuato (UG), Guanajuato, México</p>
+          <p> M.Sc. <em> of Structures</em> - Autonomous University of Queretaro (UAQ), Querétaro, México </p>
+          <p> PhD student in Civil Engineering <em> (Scientific Computation)</em> - Hong Kong University of Science and Technology (HKUST), Hong Kong, China</p>
+        </div>
       </div>
     </div>
-    <div class="nav">
-      <div class="container">
-        <ul>
-          <li> <a class="btn" href="publications.html">Scientific Publications (Papers)</a></li>
-          <li> <a class="btn" href="osoftware.html">Open Source Software</a></li>
-          <li> <a class="btn" href="social_websites.html">Social research websites</a></li>
-        </ul>
+
+
+
+    <div class="tablet">
+      <div class="header">
+        <div class="container">
+          <h1>Luis Fernando Verduzco</h1>
+          <p>Welcome to my personal website</p>
+          <a class="btn" href="skills_experience.html">Professional experience and skills</a>
+        </div>
+      </div>
+      <div class="nav">
+        <div class="container">
+          <ul>
+            <li> <a class="btn" href="publications.html">Scientific Publications (Papers)</a></li>
+            <li> <a class="btn" href="osoftware.html">Open Source Software</a></li>
+          </ul>
+        </div>
+      </div>
+      
+      <div class="nav">
+        <div class="container">
+          <ul>
+            <li> <a class="btn" href="social_websites.html">Social research websites</a></li>
+            <li><a class="btn" href="industry.html">Civil Infrastructure projects</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="nav">
+        <div class="container">
+          <ul>
+            <li><a class="btn" href="current_research.html">Current research and projects</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="nav">
+        <div class="container">
+          <ul>
+            <li><a class="btn" href="bio.html">About me</a></li>
+            <li><a class="btn" href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="main">
+        <div class="container">
+          <img src="meLFVM.jpg" width="230cm" height="320cm"/><br><br>
+          <h2>Educational background</h2>
+          <p> B.Eng. <em>Civil Engineer </em> - University of Guanajuato (UG), Guanajuato, México</p>
+          <p> M.Sc. <em> of Structures</em> - Autonomous University of Queretaro (UAQ), Querétaro, México </p>
+          <p> PhD student in Civil Engineering <em> (Scientific Computation)</em> - Hong Kong University of Science and Technology (HKUST), Hong Kong, China</p>
+        </div>
       </div>
     </div>
-    <div class="nav">
-      <div class="container">
-        <ul>
-          <li><a class="btn" href="industry.html">Civil Infrastructure projects</a></li>
-          <li><a class="btn" href="current_research.html">Current research and projects</a></li>
-          <li><a class="btn" href="bio.html">About me</a></li>
-          <li><a class="btn" href="contact.html">Contact</a></li>
-        </ul>
+
+
+
+    <div class="movil">
+      <div class="header">
+        <div class="container">
+          <h1>Luis Fernando Verduzco</h1>
+          <p>Welcome to my personal website</p>
+          <a class="btn" href="skills_experience.html">Professional experience and skills</a>
+        </div>
       </div>
-    </div>
-    <div class="main">
-      <div class="container">
-        <img src="meLFVM.jpg" width="230cm" height="320cm"/><br><br>
-        <h2>Educational background</h2>
-        <p> B.Eng. <em>Civil Engineer </em> - University of Guanajuato (UG), Guanajuato, México</p>
-        <p> M.Sc. <em> of Structures</em> - Autonomous University of Queretaro (UAQ), Querétaro, México </p>
-        <p> PhD student in Civil Engineering <em> (Scientific Computation)</em> - Hong Kong University of Science and Technology (HKUST), Hong Kong, China</p>
+      <div class="nav">
+        <div class="container">
+          <ul>
+            <li> <a class="btn" href="publications.html">Scientific Publications (Papers)</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="nav">
+        <div class="container">
+          <ul>
+            <li> <a class="btn" href="osoftware.html">Open Source Software</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="nav">
+        <div class="container">
+          <ul>
+            <li> <a class="btn" href="social_websites.html">Social research websites</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="nav">
+        <div class="container">
+          <ul>
+            <li><a class="btn" href="industry.html">Civil Infrastructure projects</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="nav">
+        <div class="container">
+          <ul>
+            <li><a class="btn" href="current_research.html">Current research and projects</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="nav">
+        <div class="container">
+          <ul>
+            <li><a class="btn" href="bio.html">About me</a></li>
+            <li><a class="btn" href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="main">
+        <div class="container">
+          <img src="meLFVM.jpg" width="230cm" height="320cm"/><br><br>
+          <h2>Educational background</h2>
+          <p> B.Eng. <em>Civil Engineer </em> - University of Guanajuato (UG), Guanajuato, México</p>
+          <p> M.Sc. <em> of Structures</em> - Autonomous University of Queretaro (UAQ), Querétaro, México </p>
+          <p> PhD student in Civil Engineering <em> (Scientific Computation)</em> - Hong Kong University of Science and Technology (HKUST), Hong Kong, China</p>
+        </div>
       </div>
     </div>
   </body>
