Publication link update

--- a/publications.html
+++ b/publications.html
@@ -30,7 +30,7 @@
               Juan Bosco Hernández Zaragoza, Performance-Based Optimization of Reinforced 
               Ductile Concrete Frames with Asymmetric Reinforcement in Columns Using the 
               ISR Analogy, Current Journal Of Applied Science and Technology. 2021;40(21);32-60. 
-              <a href="10.9734/cjast/2021/v40i2131469">10.9734/cjast/2021/v40i2131469</a></li>
+              <a href="https://doi.org/10.9734/cjast/2021/v40i2131469">10.9734/cjast/2021/v40i2131469</a></li>
         </ol>
         <h2>SCIPEDIA</h2>
         <ol>
