--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <div class="container">
           <img src="meLFVM.jpg" width="230cm" height="320cm"/><br><br>
           <h2>Educational background</h2>
-          <p> B.Eng. <em>Civil Engineer </em> - University of Guanajuato (UG), Guanajuato, México</p>
+          <p> B.Eng. <em>Civil Engineering </em> - University of Guanajuato (UG), Guanajuato, México</p>
           <p> M.Sc. <em> of Structures</em> - Autonomous University of Queretaro (UAQ), Querétaro, México </p>
-          <p> PhD student in Civil Engineering <em> (Scientific Computation)</em> - Hong Kong University of Science and Technology (HKUST), Hong Kong, China</p>
+          <p> PhD student in Civil Engineering <em> (Scientific Computation)</em> - Hong Kong University of Science and Technology (HKUST), Hong Kong, Hong Kong</p>
         </div>
       </div>
     </div>
@@ -93,9 +93,9 @@
         <div class="container">
           <img src="meLFVM.jpg" width="230cm" height="320cm"/><br><br>
           <h2>Educational background</h2>
-          <p> B.Eng. <em>Civil Engineer </em> - University of Guanajuato (UG), Guanajuato, México</p>
+          <p> B.Eng. <em>Civil Engineering </em> - University of Guanajuato (UG), Guanajuato, México</p>
           <p> M.Sc. <em> of Structures</em> - Autonomous University of Queretaro (UAQ), Querétaro, México </p>
-          <p> PhD student in Civil Engineering <em> (Scientific Computation)</em> - Hong Kong University of Science and Technology (HKUST), Hong Kong, China</p>
+          <p> PhD student in Civil Engineering <em> (Scientific Computation)</em> - Hong Kong University of Science and Technology (HKUST), Hong Kong, Hong Kong</p>
         </div>
       </div>
     </div>
@@ -157,9 +157,9 @@
         <div class="container">
           <img src="meLFVM.jpg" width="230cm" height="320cm"/><br><br>
           <h2>Educational background</h2>
-          <p> B.Eng. <em>Civil Engineer </em> - University of Guanajuato (UG), Guanajuato, México</p>
+          <p> B.Eng. <em>Civil Engineering </em> - University of Guanajuato (UG), Guanajuato, México</p>
           <p> M.Sc. <em> of Structures</em> - Autonomous University of Queretaro (UAQ), Querétaro, México </p>
-          <p> PhD student in Civil Engineering <em> (Scientific Computation)</em> - Hong Kong University of Science and Technology (HKUST), Hong Kong, China</p>
+          <p> PhD student in Civil Engineering <em> (Scientific Computation)</em> - Hong Kong University of Science and Technology (HKUST), Hong Kong, Hong Kong</p>
         </div>
       </div>
     </div>
