--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@
       </div>
       <div class="main">
         <div class="container">
-          <h2><img src="whatsapp_logo.png" width="50cm" height="50cm"/><br><br>+52 1 4622527363</h2><br><br><br><br>
-          <h2><img src="oulook_logo.png" width="50cm" height="50cm"/><br><br>lf.verduzcomartinez@ugto.mx</h2><br><br><br><br>
+          <h2><img src="whatsapp_logo.png" width="50cm" height="50cm"/><br><br>+852 51715989 (Hong Kong)</h2><br><br><br><br>
+          <h2><img src="oulook_logo.png" width="50cm" height="50cm"/><br><br>lfvm@connect.ust.hk</h2><br><br><br><br>
           <h2><img src="gmail_logo.png" width="50cm" height="50cm"/><br><br>luiz.verduz@gmail.com</h2><br><br><br><br>
         </div>
       </div>
