--- a/current_research.html
+++ b/current_research.html
@@ -17,24 +17,24 @@
     </div>
     <div class="main">
       <div class="container">
+        <br>
+        <img src="MOO_beams.jpg" width="180cm" height="130cm"/>
+        <br>
+        <h2>Surrogate-Assisted Constructability-based Multi-objective Optimization design of rebar for Reinforced Concrete Structres with Evolutionary Algorithms</h2>
+        <ul>
+          <li>The deployment of multi-objective optimization is key when working with Generative Design through BIM-based environments. 
+            For this purpose, the use of surrogate models is a preponderant factor to minimize time execution demands for larger and complex 
+            structural systems. In this area, constructability-based optimization design of rebar in RC structures remains an unexplored study.</li>
+        </ul>
+        <br>
         <img src="calrecod_logo.png" width="180cm" height="100cm"/>
-        <p><br><br></p>
-        <h2>Maintanance and development of CALRECOD</h2>
+        <h2>Maintanance and development of CALRECOD and CAL-software</h2>
         <ul>
           <li>As the creator of CALRECOD it is my resposibility to keep on developing new functions for further 
               versions of CALRECOD. At this point new functionalities for the optimal design of hollow concrete
-              columns is are being developed as well as for the design of prestressed concrete beams.</li>
+              columns are being developed as well as for the design of prestressed concrete girders.</li>
         </ul>
-        <br>
-        <img src="slendercols01.jpeg" width="180cm" height="100cm"/>
         <p>
-        <h2>Geometrical Non-Linear influence of asymmetrical reinforcement in slender concrete columns in their moment amplification factors</h2>
-        <ul>
-          <li>Asymmetrical reinforcement in concrete columns has demonstrated to be a great practice to 
-              reduced envrionmental impacts from the construction of reinforced concrete columns. 
-              It is thus vital to keep on developing research related to this design approach for future
-              codes to consider it in their guidelines.</li>
-        </ul>
       </div>
     </div>
   </body>
