--- a/publications.html
+++ b/publications.html
@@ -24,6 +24,14 @@
               Advances in Engineering Software. 2022;172(103189);ISSN 0965-9978. <a href="https://doi.org/10.1016/j.advengsoft.2022.103189">
               https://doi.org/10.1016/j.advengsoft.2022.103189 </a>.</li>
         </ol>
+        
+        <h2>SPRINGER NATURE</h2>
+        <ol>
+          <li>Luis F. Verduzco, 
+            Constructability‑based multi‑objective optimization with machine learning‑enhanced meta‑heuristics for reinforcing bar design 
+            in rectangular concrete columns, Structural and Multidisciplinary Optimimization. 2025;68(). <a href="https://doi.org/10.1007/s00158-024-03914-8">
+              https://doi.org/10.1007/s00158-024-03914-8 </a>.</li>
+        </ol>
         <h2>SCIENCEDOMAIN</h2>
         <ol>
           <li>L.F. Verduzco Martínez, J.M.Horta Rangel, Miguel Ángel Pérez Lara y Hernández, 
