--- a/publications.html
+++ b/publications.html
@@ -17,20 +17,19 @@
     </div>
     <div class="main">
       <div class="container">
+        <h2>SPRINGER NATURE</h2>
+        <ol>
+          <li>Luis F. Verduzco, 
+            Constructability‑based multi‑objective optimization with machine learning‑enhanced meta‑heuristics for reinforcing bar design
+            in rectangular concrete columns, Structural and Multidisciplinary Optimimization. 2025;68(29). <a href="https://doi.org/10.1007/s00158-024-03914-8">
+              https://doi.org/10.1007/s00158-024-03914-8 </a>.</li>
+        </ol>
         <h2>ELSEVIER</h2>
         <ol>
           <li>Luis Fernando Verduzco, Jaime Horta, Miguel A. Pérez Lara y Hernández, Juan Bosco Hernández, 
               CALRECOD — A software for Computed Aided Learning of REinforced COncrete structural Design, 
               Advances in Engineering Software. 2022;172(103189);ISSN 0965-9978. <a href="https://doi.org/10.1016/j.advengsoft.2022.103189">
               https://doi.org/10.1016/j.advengsoft.2022.103189 </a>.</li>
-        </ol>
-        
-        <h2>SPRINGER NATURE</h2>
-        <ol>
-          <li>Luis F. Verduzco, 
-            Constructability‑based multi‑objective optimization with machine learning‑enhanced meta‑heuristics for reinforcing bar design 
-            in rectangular concrete columns, Structural and Multidisciplinary Optimimization. 2025;68(). <a href="https://doi.org/10.1007/s00158-024-03914-8">
-              https://doi.org/10.1007/s00158-024-03914-8 </a>.</li>
         </ol>
         <h2>SCIENCEDOMAIN</h2>
         <ol>
