--- a/publications.html
+++ b/publications.html
@@ -21,14 +21,14 @@
         <ol>
           <li>Luis F. Verduzco, 
             Constructability‑based multi‑objective optimization with machine learning‑enhanced meta‑heuristics for reinforcing bar design
-            in rectangular concrete columns, Structural and Multidisciplinary Optimimization. 2025;68(29). <a href="https://doi.org/10.1007/s00158-024-03914-8">
+            in rectangular concrete columns, Struct Multidisc Optim. 68(29);2025. <a href="https://doi.org/10.1007/s00158-024-03914-8">
               https://doi.org/10.1007/s00158-024-03914-8 </a>.</li>
         </ol>
         <h2>ELSEVIER</h2>
         <ol>
           <li>Luis Fernando Verduzco, Jaime Horta, Miguel A. Pérez Lara y Hernández, Juan Bosco Hernández, 
               CALRECOD — A software for Computed Aided Learning of REinforced COncrete structural Design, 
-              Advances in Engineering Software. 2022;172(103189);ISSN 0965-9978. <a href="https://doi.org/10.1016/j.advengsoft.2022.103189">
+              Advances in Engineering Software. 172(103189);2022. ISSN 0965-9978. <a href="https://doi.org/10.1016/j.advengsoft.2022.103189">
               https://doi.org/10.1016/j.advengsoft.2022.103189 </a>.</li>
         </ol>
         <h2>SCIENCEDOMAIN</h2>
@@ -36,7 +36,7 @@
           <li>L.F. Verduzco Martínez, J.M.Horta Rangel, Miguel Ángel Pérez Lara y Hernández, 
               Juan Bosco Hernández Zaragoza, Performance-Based Optimization of Reinforced 
               Ductile Concrete Frames with Asymmetric Reinforcement in Columns Using the 
-              ISR Analogy, Current Journal Of Applied Science and Technology. 2021;40(21);32-60. 
+              ISR Analogy, Current Journal Of Applied Science and Technology. 40(21);32-60;2021. 
               <a href="https://doi.org/10.9734/cjast/2021/v40i2131469">10.9734/cjast/2021/v40i2131469</a></li>
         </ol>
         <h2>SCIPEDIA</h2>
