--- a/current_research.html
+++ b/current_research.html
@@ -18,13 +18,14 @@
     <div class="main">
       <div class="container">
         <br>
-        <img src="MOO_beams.jpg" width="180cm" height="130cm"/>
+        <img src="free_clash.jpg" width="180cm" height="130cm"/>
         <br>
-        <h2>Surrogate-Assisted Constructability-based Multi-objective Optimization design of rebar for Reinforced Concrete Structres with Evolutionary Algorithms</h2>
+        <h2>Surrogate-Assisted Constructability-based Multi-objective Free-clash Rebar Optimization design for Reinforced Concrete Frames</h2>
         <ul>
-          <li>The deployment of multi-objective optimization is key when working with Generative Design through BIM-based environments. 
-            For this purpose, the use of surrogate models is a preponderant factor to minimize time execution demands for larger and complex 
-            structural systems. In this area, constructability-based optimization design of rebar in RC structures remains an unexplored study.</li>
+          <li>There's a gap in the literature concerning the lack of clash-free rebar design workflows for irregular RC components and 
+            their intersections, such as concrete staircases - slabs/beams or cranked beams - columns. In today's needs for building engineering
+            where irregular structures are becoming more popular, the development of new AI models and optimization design frameworks to adreess
+            this gap is preponderant more efficient constructability-based design.</li>
         </ul>
         <br>
         <img src="calrecod_logo.png" width="180cm" height="100cm"/>
@@ -33,6 +34,16 @@
           <li>As the creator of CALRECOD it is my resposibility to keep on developing new functions for further 
               versions of CALRECOD. At this point new functionalities for the optimal design of hollow concrete
               columns are being developed as well as for the design of prestressed concrete girders.</li>
+        </ul>
+        <br>
+        <img src="Logo_CALDRECUST.png" width="220cm" height="160cm"/>
+        <h2>Maintanance and development of CADRECUST and CAL-software</h2>
+        <ul>
+          <li>A new project is in motion. Computed-Aided Design for Reinforced Concrete HKUST (CADREC-UST). In contrast to CALRECOD, 
+              this OS package contains broader functionalities, not only for engineering education but for research. On of its components is, 
+              for instance, CALDREC-UST, similar than CALRECOD, but with more teaching environements, with AI models and BIM workflows, for better
+              educaitonal adaptations to today's needs for higher enducation civil engineering programmes. Other components include: CPyRO-GraphNet-Beams, 
+              a state-of-art surrogate model for optimization design of rebar in concrete beams. Check it out at: <a href="https://github.com/cadrecust">GitHub repository</a></li>
         </ul>
         <p>
       </div>
