--- a/osoftware.html
+++ b/osoftware.html
@@ -21,9 +21,13 @@
         <ul>
           <li><a href="https://github.com/calrecod/CALRECOD">GitHub repository</a> </li>
         </ul>
-        <h2>CALRECOD - Computed Aided Learning of Reinforced Concrete Design (Python)</h2>
+        <h2>pyCALRECOD - Computed Aided Learning of Reinforced Concrete Design (Python)</h2>
         <ul>
           <li>in progress...</li>
+        </ul>
+        <h2>CADREC-UST - Computed-Aided Design of Reinforced Concrete (MatLab)</h2>
+        <ul>
+          <li><a href="https://github.com/cadrecust">GitHub repository</a> </li>
         </ul>
       </div>
     </div>
