--- a/skills_experience.html
+++ b/skills_experience.html
@@ -18,7 +18,8 @@
     <div class="main">
       <div class="container">
         <h2>BIM and CAD Modelling </h2>
-        <img src="Bim_modelling.png" width="400cm" height="320cm"/><br><br>
+        <img src="Bim_modelling.png" width="310cm" height="270cm"/>
+        <img src="tekla_workflow.jpg" width="520cm" height="270cm"/><br><br>
         <ol>
           <li>Dynamo - Revit - AutoCAD</li>
               <p>3D Modelling of Reinforced Concrete Structures and Steel Structures</p>
@@ -31,16 +32,30 @@
               <ul>
                 <li>Topographyc surveys and modelling of surfaces and contour lines</li>
                 <li>Design and modelling of Highways</li>
+              </ul><br>
+          <li>Tekla Structures - Tekla Structural Designer - Rhino/Grasshopper</li>
+              <ul>
+                <li>BIM automation of RC/steel structures and buildings </li>
+                <li>Code-compliant free-clash optimization design of rebar in RC structures</li>
+                <li>Automation design of steel connections (buildings, warehouses, etc.)</li>
               </ul>
         </ol>
-        <br><br><br><br><br><br><br>
-        <h2>Numerical modelling, simulation and analysis with the Finite Element Method (FEM)</h2>
-        <img src="fem_2d.jpg" width="320cm" height="320cm"/><br><br>
-        <ol>
-          <li>Heat transfer - Stationary and Transient 1D/2D Heat Flow</li>
-          <li>Static and Dynamic Plane Stress and Plane Strain</li>
-        </ol>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <h2>Numerical modelling, simulation and analysis with the Finite Element Method (FEM)</h2>
+        <img src="pyansys_workflow.jpg" width="320cm" height="320cm"/><br><br>
+        <ol>
+          <li>ANSYS Workbench - PyAnsys </li>
+              <ul>
+                <li>Heat transfer - Stationary and Transient 1D/2D/3D Heat Flow </li>
+                <li>Static and Dynamic Plane Stress and Plane Strain </li>
+                <li>Size optimization design of RC and steel components</li>
+              </ul>
+          <li>ANSYS Mechanical- Ansys Parametric Design Languae (APDL) </li>
+              <ul>
+                <li>Parametric FEA and design of irregular RC/steel building frames </li>
+              </ul>
+        </ol>
+        <br><br><br><br><br><br><br><br><br><br><br><br>
         <h2>Structural design, modelling and analysis</h2>
         <img src="ram_sap2000.png" width="480cm" height="300cm"/><br><br>
         <ol>
